--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer p {
   text-align: center;
   margin-bottom: 15px;
-  color: black;
+  color: $color-text;
   clear: both;
+  font-size: .8em;
  }
