--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,47 +2,52 @@
   box-sizing: border-box;
 }
 
-body {
+.container {
   max-width: 100%;
-  color: grey;
+  position: relative;
+}
+
+body {
+  background-color: $color-base;
   margin: 0;
-  font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: .6em/ $stack-sans-serif;
  }
 
-h1 {
-  font: 'Abolition Regular', Helvetica, Arial, sans-serif;
-}
 .nav-bar {
-      height: 50px;
-      width: 100%;
-      background-color: darkgrey;
-      margin-top: 0;
+      height: 40px;
+      max-width: 100%;
+      background-color: $color-nav;
+      margin: 0;
     }
-.nav-bar{
+.nav-bar {
     ul {
-      list-style: none;
-      width: 100%;
-      text-decoration: none;
+      margin: 0;
+      display: inline;
     }
     li {
-      padding: 5px;
-      padding-top: 20px;
+      max-width: 70%;
+      padding: 0;
+      padding-top: 10px;
       list-style: none;
-      float: left;
+      @extend %left;
       display: inline;
-      margin-top: 0;
-      margin-bottom: 10px;
-      background-color: darkgrey;
+      background-color:$color-nav;
+      color: $color-text;
+      margin-left: 6px;
+      margin-right: 3px;
+    }
+    a {
       text-decoration: none;
-      color: black;
-  }
+      font-style: italic;
+      font-size: .8em;
+    }
 }
   .nav-bar a {
     &:visited {
-    color: lightblue;
+    color: $color-text;
     }
     &:hover {
-    color: rgba(255, 169, 73, 0.5);
+    color: #e60073;
     }
     &:active {
     color: lightcoral;
