AddAdd mixins, extends and variables to sass files

--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -179,3 +179,14 @@
 //    margin-top: 10px;
 //  }
 // }
+
+//media queries
+//
+// @media screen (min-width: 320px) {
+//
+//   .container {
+//     max-width: 100%;
+//   }
+// .fa-ul li, .fa-ul i  {
+//     display: none;
+//   }
