--- a/scss/application.scss
+++ b/scss/application.scss
@@ -1,7 +1,8 @@
 // Global IMPORTS ONLY.
 
 
-// @import '../bourbon/bourbon';
+@import '../bourbon/bourbon';
+// @import 'other-sass-partials-below';
 @import 'base/index';
 @import 'layout/index';
 @import 'components/index';
