--- a/css/application.css
+++ b/css/application.css
@@ -6,9 +6,12 @@
   position: relative; }
 
 body {
-  background-color: #F5F5DC;
+  background-color: lightblue;
+  background-image: -webkit-linear-gradient(bottom, lightblue, lightyellow);
+  background-image: linear-gradient(to top,lightblue, lightyellow);
   margin: 0;
-  font: 0.6em/Helvetica, Arial, sans-serif; }
+  font: 0.9em/Helvetica, Arial, sans-serif;
+  max-width: 100%; }
 
 .nav-bar {
   height: 40px;
@@ -20,19 +23,19 @@ body {
   margin: 0;
   display: inline; }
 .nav-bar li {
-  max-width: 70%;
+  max-width: 100%;
   padding: 0;
   padding-top: 10px;
+  padding-left: 0;
   list-style: none;
   display: inline;
   background-color: #85adad;
-  color: #000;
-  margin-left: 6px;
-  margin-right: 3px; }
+  color: black;
+  margin-left: 15px; }
 .nav-bar a {
   text-decoration: none;
   font-style: italic;
-  font-size: .8em; }
+  font-size: 1em; }
 
 .nav-bar a:visited {
   color: #000; }
@@ -51,7 +54,7 @@ body {
   color: #000;
   text-decoration: underline;
   margin-left: -12px;
-  margin-top: 8px;
+  margin-top: 18px;
   font-style: oblique; }
 .sidebar ul {
   display: block;
@@ -59,7 +62,8 @@ body {
 
 .main {
   max-width: 80%;
-  height: 100%; }
+  height: 100%;
+  position: relative; }
 
 .about p {
   margin-right: 10px;
@@ -73,32 +77,55 @@ body {
   float: right; }
 
 .images-list li, .images-list img {
-  max-width: 100%;
-  margin-top: 15px;
+  max-width: 80%;
+  height: auto;
   list-style: none;
-  margin-left: -40px;
-  height: 50px;
-  margin-bottom: 220px;
+  margin-top: 10px;
+  margin-left: -50px;
+  margin-right: 20px;
+  padding-left: 20px;
   position: relative;
-  float: right; }
+  float: right;
+  overflow: none; }
 
-.images-list img {
-  max-width: 100%;
-  margin-left: 25px;
-  margin-right: 35px;
-  height: auto; }
+img {
+  max-width: 80%;
+  height: auto;
+  list-style: none;
+  display: inline;
+  box-shadow: 3px #777; }
 
+@media only screen and (min-width: 450px) {
+  .images-list li:nth-child(9) {
+    display: none; } }
+@media (max-width: 768px) {
+  .images-list li:nth-child(9) {
+    display: inline; } }
+@media (max-width: 1024px) {
+  .main {
+    max-width: 80%;
+    max-height: 100%; } }
 .footer p {
   text-align: center;
-  margin-bottom: 15px;
+  margin: 0;
+  max-width: auto;
+  height: 20%;
+  padding-top: 330px;
   color: #000;
-  clear: both;
-  font-size: .8em; }
+  clear: both; }
+  @media (max-width: 1024px) {
+    .footer p {
+      font-size: 1em;
+      color: red; } }
 
+@media (max-width: 768px) {
+  .footer p {
+    padding-top: 180px;
+    color: red; } }
 .heading h1 {
   font-family: Courier, Helvetica, Arial, sans-serif;
-  font-size: 2rem;
-  color: #110C6C;
+  font-size: 2.5rem;
+  color: #1f16c8;
   height: 70px;
   text-align: center;
   padding-top: 22px;
@@ -112,14 +139,18 @@ body {
 .main, .about p, .images-list li, .images-list img, .about button {
   float: right; }
 
-.images-list li, .images-list img {
-  border: 1px solid #000; }
-
 .sidebar button, .about button {
   background-color: #C7DDE5;
   padding: 2px;
-  font-size: .6em;
+  font-size: .9em;
   font-family: fantasy; }
+
+.fa-ul li, .fa-ul i {
+  float: right;
+  margin-right: 5px;
+  padding: 2px;
+  padding-left: 10px;
+  top: 5px; }
 
 .sidebar button {
   margin-left: 15px;
@@ -128,5 +159,39 @@ body {
 .about button {
   position: absolute;
   margin: 23px 310px 20px 110px; }
+
+.form {
+  max-width: auto;
+  float: left;
+  margin-top: 50%;
+  margin-left: 25px;
+  font-size: 1em;
+  position: absolute; }
+  @media (max-width: 1024px) {
+    .form {
+      font-size: 1em; } }
+
+@media (max-width: 768px) {
+  .form {
+    margin-top: 640px;
+    margin-left: 20px; } }
+.fa-ul li, .fa-ul i {
+  color: black; }
+
+i {
+  margin-top: -2px;
+  margin-left: 5px; }
+
+@media (max-width: 768px) {
+  .fa-ul li, .fa-ul i {
+    float: right;
+    margin-right: 15px;
+    padding-left: 30px; } }
+@media only screen and (max-width: 450px) {
+  .fa-ul li, .fa-ul i {
+    display: none; }
+
+  i {
+    display: none; } }
 
 /*# sourceMappingURL=application.css.map */
