--- a/scss/layout/_extends.scss
+++ b/scss/layout/_extends.scss
@@ -1,3 +1,4 @@
+
 //floatleft
 
 %left {
@@ -6,16 +7,19 @@
  %right {
    float: right;
  }
-%border {
-  border: 1px solid $color-text;
- }
-// %border-img {
-//   border: 1px solid $color-text;
-// }
 %button {
   background-color: $button-color;
   padding: 2px;
-  font-size: .6em;
-  // @extend %border-img;
-font-family: fantasy;
+  font-size: .9em;
+  font-family: fantasy;
+
 }
+
+%icons {
+  float: right;
+  margin-right: 5px;
+  padding: 2px;
+  padding-left: 10px;
+  top: 5px;
+
+  }
