--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,12 +1,11 @@
 .heading h1 {
   font-family: $stack-courier;
-  font-size: 2rem;
-  color: $color-heading;
+  font-size: 2.5rem;
+  color: lighten($color-heading, 20%);
   height: 70px;
   text-align: center;
   padding-top: 22px;
   padding-bottom: 25px;
   background-color: lightgrey;
   margin: 0;
-  // margin-top: 15px;
 }
